2005-09-19 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c, isis_pdu.c, isis_spf.c: Remove some old unused code.

2005-09-19 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c: Better output of detailed LSP printout and fixed TE IPv4
	  reachibility metric display.

2005-09-19 Hasso Tepper <hasso at quagga.net>

	* isis_tlv.h: Cleanup comment about TLVs we should support, remove info
	  about useless (in sense of IP(v6)) TLVs.

2005-09-19 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.h: Added backpointer to the area from LSP. For now it's used
	  only in generated topology LSPs.
	* isisd.[ch]: Cleanup CLI commands related to topology generation and
	  added command to specify base fo dynamic hostname for topology LSPs.
	* isis_lsp.c: Rewrite almost all code related to generation topology
	  LSPs (top_lsp_refresh(), generate_topology_lsps() and
	  build_topology_lsp_data() functions). Topology is connected to own
	  LSP now (lsp_build_nonpseudo). Commented out lsppdu_realloc
	  functions, it's not used any more hopefully.

2005-09-18 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c (lsp_update): Fix previous commit - manipulate the right
	  database and only if LSP is really in the database (sanity check).

2005-09-16 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c (lsp_update): Remove LSP from database before updating
	  its data and put it back after. Database entry MUST contain at least
	  correct pointers to the sysid to get correct compare results.
	* isis_lsp.[ch], isis_pdu.c: Pass level to the lsp_update() function.

2005-09-05 Hasso Tepper <hasso at quagga.net>

	* *.c: Try to be less verbose by default (without any debug options
	  on).
	* isis_lsp.c (lsp_build_nonpseudo): Use stream_reset() instead of
	  touching endp directly.
	* isis_lsp.c (lsp_build_pseudo): Ditto.

2005-09-03 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c: Yet another regression introduced by stream cleanup.
	  Similar fix to the one commited to lsp_build_nonpseudo() some days